@@ -96,8 +96,8 @@ extern void *scm_c_hook_run (scm_c_hook_t *hook, void *data);
  * Scheme level hooks
  */
 
-#define SCM_HOOKP(x) (SCM_NIMP(x) && (SCM_TYP16 (x) == scm_tc16_hook))
-#define SCM_HOOK_ARITY(hook) (SCM_UNPACK_CAR (hook) >> 16)
+#define SCM_HOOKP(x) (!SCM_IMP (x) && (SCM_TYP16 (x) == scm_tc16_hook))
+#define SCM_HOOK_ARITY(hook) (SCM_CELL_WORD_0 (hook) >> 16)
 #define SCM_HOOK_NAME(hook) SCM_CADR (hook)
 #define SCM_HOOK_PROCEDURES(hook) SCM_CDDR (hook)
 #define SCM_SET_HOOK_PROCEDURES(hook, procs) SCM_SETCDR (SCM_CDR (hook), procs)
